--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -3,7 +3,7 @@
     <string name="folder">مجلد</string>
     <string name="archive">الأرشيف</string>
     <string name="extract">استخراج</string>
-    <string name="copy_text">نسخ</string>
+    <string name="copy_text">انسخ</string>
     <string name="no_files_to_archive">لم يتم تحديد أي ملفات للأرشفة</string>
     <string name="extract_path">مجلد الملفات المُستخرجة</string>
     <string name="archive_path">مجلد الملفات المؤرشفة</string>
@@ -71,7 +71,7 @@
     <string name="file_path">المسار</string>
     <string name="file_size">الحجم</string>
     <string name="last_modified">آخر تعديل</string>
-    <string name="cancel">إلغاء</string>
+    <string name="cancel">ألغِ</string>
     <string name="donate">تبرع</string>
     <string name="ok">موافق</string>
     <string name="enter_password">أدخل كلمة المرور</string>
@@ -111,24 +111,25 @@
     <string name="tar_creation_failed">حدث خطأ في أرشفة ملف TAR</string>
     <string name="compression_failed">فشل الضغط</string>
     <string name="sevenz_creation_failed">حدث خطأ في أرشفة ملف 7z</string>
-    <string name="confirm_password">كلمة السر</string>
+    <string name="confirm_password">أكّد كلمة السر</string>
     <string name="wrong_password">كلمة سر خاطئة</string>
     <string name="passwords_do_not_match">كلمة السر لا تتطابق</string>
     <string name="file_already_exists">الملف موجود بالفعل</string>
-    <string name="invalid_value">Invalid input</string>
-    <string name="please_enter_value_between_0_and_22">إدخال قيمة تتراوح بين صفر و22</string>
-    <string name="archiving_started_in_background">بدأت المحفوظات في الخلفية</string>
+    <string name="invalid_value">إدخال غير صالح</string>
+    <string name="please_enter_value_between_0_and_22">أدخل قيمة تتراوح بين 0 و 22</string>
+    <string name="archiving_started_in_background">بدأ الأرشفة في الخلفية</string>
     <string name="no_compression">لا ضغط</string>
-    <string name="remove">إزالة الألغام</string>
-    <string name="preview_archive">المحفوظات</string>
-    <string name="add">مضافا إليها</string>
-    <string name="directory_selection_disabled">لا يمكن اختيار الفولدر، اختيار الملفات داخله.</string>
-    <string name="select_file">بيع ملف..</string>
-    <string name="select_files">Add (%d)</string>
-    <string name="donate_desc">إذا وجدتم أن زيبكرو مفيد، يرجى النظر في دعم تطويره:</string>
-    <string name="error_too_many_parts">This would generate %1$d parts</string>
-    <string name="select_archive_type_title">نوع المحفوظات المختارة</string>
-    <string name="add_folder_confirmation_title">أضف الملف الحالي؟?</string>
+    <string name="remove">أزل</string>
+    <string name="preview_archive">معاينة الأرشيف</string>
+    <string name="add">أضف</string>
+    <string name="directory_selection_disabled">لا يمكن تحديد المجلد، يُرجى تحديد الملفات الموجودة بداخله.</string>
+    <string name="select_file">حدّد ملف…</string>
+    <string name="select_files">أضف (%d)</string>
+    <string name="donate_desc">إذا وجدت ZipXtract مفيدًا، يُرجى التفكير في دعم تطويره:</string>
+    <string name="error_too_many_parts">سيؤدي هذا إلى توليد %1$d جزءًا</string>
+    <string name="select_archive_type_title">حدّد نوع الأرشيف</string>
+    <string name="add_folder_confirmation_title">أضف المجلد الحالي؟</string>
+    <string name="add_folder_confirmation_message">هل تريد إضافة المجلد \'%1$s\' إلى الأرشيف؟</string>
     <string name="split_parts_number_req">السماح بأكثر من 100 جزء مقسم</string>
     <string name="fast_search">البحث السريع</string>
     <string name="fast_search_summary">استخدام الرقم القياسي لوسائط الإعلام أندرويد للبحث السريع</string>
@@ -141,4 +142,41 @@
     <string name="invalid_archive_type">محفوظات غير صالحة</string>
     <string name="updating_archive">محفوظات متطورة..</string>
     <string name="update_archive_service">تحديث المحفوظات</string>
+    <string name="select_directory">حدّد مجلدًا…</string>
+    <string name="output_path">مسار الإخراج</string>
+    <string name="select">حدّد</string>
+    <string name="no_match">لا تطابق</string>
+    <string name="refresh">أنعش</string>
+    <string name="refreshed">أُنعش</string>
+    <string name="storage_info_format">المتاح: %1$s / الإجمالي: %2$s</string>
+    <string name="low_storage_warning">تحذير: مساحة تخزين منخفضة! المتاحة: %1$s</string>
+    <string name="low_storage_warning_dynamic">مساحة تخزين منخفضة! %1$s متاحة، أفرغ مساحة لا تقل عن ~%2$s. قد تكون هناك حاجة إلى مساحة إضافية بناءً على تنسيق الأرشيف.</string>
+    <string name="please_wait">من فضلك انتظر…</string>
+    <string name="compare">Compare</string>
+    <string name="file_does_not_exist">الملف لا وجود له</string>
+    <string name="automatic_threads">الحد الأقصى للخيوط</string>
+    <string name="automatic_threads_subtitle">استخدام الحد الأقصى للوحدة في أسرع سرعة</string>
+    <string name="automatic_threads_warning">تحذير: يستعمل كل النواة قد يصبح الجهاز غير مستجيب أثناء عملية المحفوظات.</string>
+    <string name="solid_compression_subtitle">تحسّن نسبة العديد من الملفات الصغيرة لكن وقت الاستخراج سيزيد</string>
+    <string name="destination">معلومات عامة</string>
+    <string name="compression_settings">حالات الضغط</string>
+    <string name="security">الأمن</string>
+    <string name="specify_custom_thread_count">تحديد عدد الخيوط المعتادة</string>
+    <string name="min_split_size_error">الحد الأدنى للحجم هو 64 كيلوبايت</string>
+    <string name="success">النجاح</string>
+    <string name="error">الرعب</string>
+    <string name="archive_created">المحفوظات</string>
+    <string name="extraction_completed">الإنجاز</string>
+    <string name="archive_updated">تحديث المحفوظات</string>
+    <string name="compression_completed">إكمال الضغط</string>
+    <string name="zstd_compression_level_format">ZSTD Compression Level: %d</string>
+    <string name="share_file">شارك</string>
+    <string name="storage_access_title">الوصول إلى التخزين مطلوب</string>
+    <string name="storage_access_description">يتطلب ZipXtract إذنًا للوصول إلى تخزين جهازك للعثور على ملفاتك واستخراجها وتنظيمها بفعالية.</string>
+    <string name="storage_safety_text">ملفاتك آمنة. هذا التطبيق لا يملك إذن اتصال بالإنترنت، لذا لا يمكن رفع البيانات إلى خوادم خارجية.</string>
+    <string name="available_storage_format">متاح %1$s</string>
+    <string name="total_storage_format">الإجمالي: %1$s</string>
+    <string name="select_storage">حدّد التخزين</string>
+    <string name="show_hidden_files">تظهر الملفات الخفية</string>
+    <string name="show_hidden_files_summary">تظهر الملفات بدءا من نقطة</string>
 </resources>
