--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -147,4 +147,41 @@
     <string name="invalid_archive_type">Tipo de arquivo inválido</string>
     <string name="updating_archive">Arquivo actualizado..</string>
     <string name="update_archive_service">Arquivo de atualização</string>
+    <string name="select_directory">Selecione o diretório..</string>
+    <string name="output_path">Caminho de saída</string>
+    <string name="no_match">Sem correspondência</string>
+    <string name="refresh">Atualizar</string>
+    <string name="refreshed">Atualizado</string>
+    <string name="storage_info_format">Disponível: %1$s / Total: %2$s</string>
+    <string name="low_storage_warning">Aviso: Baixo espaço de armazenamento! Disponível: %1$s</string>
+    <string name="low_storage_warning_dynamic">Baixo armazenamento! %1$s disponível, Liberte pelo menos ~%2$s. Espaço adicional talvez necessário com base no formato de arquivo.</string>
+    <string name="please_wait">Por favor, espere..</string>
+    <string name="compare">Comparar</string>
+    <string name="file_does_not_exist">O arquivo não existe</string>
+    <string name="select">Selecionar</string>
+    <string name="automatic_threads">Roscas máximas</string>
+    <string name="automatic_threads_subtitle">Usa CPU máxima para velocidades mais rápidas</string>
+    <string name="automatic_threads_warning">Atenção: Usa todos os núcleos de CPU. O dispositivo pode tornar-se inresponsável durante a operação de arquivo.</string>
+    <string name="solid_compression_subtitle">Melhora a relação para muitos arquivos pequenos, mas o tempo de extração aumentará</string>
+    <string name="destination">Geral</string>
+    <string name="security">Segurança</string>
+    <string name="specify_custom_thread_count">Especifique a contagem de thread personalizada</string>
+    <string name="min_split_size_error">Tamanho mínimo de divisão é 64KB</string>
+    <string name="success">Sucesso</string>
+    <string name="error">Erro</string>
+    <string name="archive_created">Arquivo Criado</string>
+    <string name="extraction_completed">Extração concluída</string>
+    <string name="archive_updated">Arquivo Atualizado</string>
+    <string name="compression_completed">Compressão concluída</string>
+    <string name="zstd_compression_level_format">Nível de compressão ZSTD: %d</string>
+    <string name="compression_settings">Configurações de Compressão</string>
+    <string name="share_file">Compartilhar</string>
+    <string name="storage_access_title">Acesso ao armazenamento necessário</string>
+    <string name="storage_access_description">O ZipXtract requer permissão para acessar o armazenamento do seu dispositivo para encontrar, extrair e organizar seus arquivos de forma eficaz.</string>
+    <string name="storage_safety_text">Os seus ficheiros estão seguros. Este aplicativo não tem permissão de internet, então os dados não podem ser enviados para servidores externos.</string>
+    <string name="available_storage_format">%1$s Disponível</string>
+    <string name="total_storage_format">Total: %1$s</string>
+    <string name="select_storage">Selecione o armazenamento</string>
+    <string name="show_hidden_files">Mostrar arquivos ocultos</string>
+    <string name="show_hidden_files_summary">Mostrar arquivos começando com um ponto</string>
 </resources>
