--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -42,7 +42,7 @@
     <string name="privacy_policy">Gizlilik Politikası</string>
     <string name="source_code">Kaynak Kodu</string>
     <string name="license">Lisans</string>
-    <string name="report_an_issue">Bir Sorun Bildir</string>
+    <string name="report_an_issue">Bir sorun bildir</string>
     <string name="about">Hakkında</string>
     <string name="grant_access">Erişime İzin Ver</string>
     <string name="storage_access_permission_text">Uygulamanın düzgün çalışabilmesi için cihaz depolama alanınıza erişim izni gereklidir. Lütfen gerekli izinleri verin.</string>
@@ -82,19 +82,19 @@
     <string name="action_settings">Ayarlar</string>
     <string name="select_all">Tümünü Seç</string>
     <string name="search">Ara</string>
-    <string name="order">Sipariş</string>
+    <string name="order">Sıralama</string>
     <string name="ascending">Artan</string>
     <string name="descending">Azalan</string>
     <string name="sort_by">Şuna Göre Sırala</string>
     <string name="name">Ad</string>
     <string name="size">Boyutu</string>
     <string name="time_of_creation">Değiştirildi</string>
-    <string name="extension">Dosya uzantısı</string>
+    <string name="extension">Eklenti</string>
     <string name="close">Kapat</string>
     <string name="extract_path">Çıkarılan Dosyalar Klasörü</string>
     <string name="archive_path">Arşivlenen Dosyalar Klasörü</string>
-    <string name="archive_path_summary">Arşivlenen dosyalar için varsayılan klasörü değiştirin.\nVarsayılan klasör, mevcut klasördür.</string>
-    <string name="extract_path_summary">Çıkarılan dosyalar için varsayılan klasörü değiştirin.\nVarsayılan klasör, mevcut klasör veya “/Dahili Depolama/ZipXtract” (eğer “Şununla Aç” menüsü ile çıkarıldıysa) olarak ayarlanmıştır.</string>
+    <string name="archive_path_summary">Varsayılan çıkarma klasörünü değiştirin.\nVarsayılan değer \"üst klasör\"dür.</string>
+    <string name="extract_path_summary">Varsayılan çıkarma klasörünü değiştirin.\nVarsayılan değer \"üst klasör\" veya Dahili Depolama/ZipXtract\'tir (\"Birlikte Aç\" menüsü ile çıkarılmış arşiv için)</string>
     <string name="compress_tar">TAR Arşivle</string>
     <string name="compression_success">Sıkıştırma işlemi başarılı</string>
     <string name="archive_success">Dosya başarıyla arşivlendi</string>
@@ -112,34 +112,72 @@
     <string name="moving_files">Taşınıyor…</string>
     <string name="delete_ongoing">Siliniyor…</string>
     <string name="confirm_password">Şifreyi Onayla</string>
-    <string name="passwords_do_not_match">Şifreler uyuşmuyor</string>
+    <string name="passwords_do_not_match">Şifre uyuşmuyor</string>
     <string name="wrong_password">Yanlış şifre</string>
     <string name="file_already_exists">Dosya zaten var</string>
     <string name="open_with">Birlikte Aç</string>
-    <string name="invalid_value">Invalid girişi</string>
+    <string name="invalid_value">Geçersiz girdi</string>
     <string name="please_enter_value_between_0_and_22">0 ile 22 arasında bir değer girin</string>
-    <string name="archiving_started_in_background">Archiving arka planda başladı</string>
-    <string name="no_compression">Hiçbir Promosyon Yok</string>
-    <string name="remove">Kaldırın</string>
-    <string name="preview_archive">Preview Archive</string>
-    <string name="add">Add</string>
-    <string name="directory_selection_disabled">Folder seçilebilir, içindeki dosyaları seçin.</string>
-    <string name="select_file">Dosyayı seçin..</string>
-    <string name="donate_desc">ZipXtract faydalı bulursanız, lütfen gelişimini desteklemeyi düşünün:</string>
+    <string name="archiving_started_in_background">Arşivlemeye arka planda başladı</string>
+    <string name="no_compression">Sıkıştırma Yok</string>
+    <string name="remove">Kaldır</string>
+    <string name="preview_archive">Arşiv Dosyasını Önizle</string>
+    <string name="add">Ekle</string>
+    <string name="directory_selection_disabled">Klasör seçilemiyor, içindeki dosyaları seçin.</string>
+    <string name="select_file">Dosya Seçin…</string>
+    <string name="select_files">(%d) Ekle</string>
+    <string name="donate_desc">ZipXtract\'ı faydalı bulursanız, lütfen geliştirilmesini desteklemeyi düşünün:</string>
     <string name="error_too_many_parts">Bu %1$d parçaları üretecektir</string>
     <string name="select_archive_type_title">Arşiv türü seçin</string>
-    <string name="add_folder_confirmation_title">Mevcut klasörü ekleyin?</string>
-    <string name="add_folder_confirmation_message">Dosyaya ‘%1$s eklemek ister misiniz?</string>
+    <string name="add_folder_confirmation_title">Mevcut klasöre mi eklensin?</string>
+    <string name="add_folder_confirmation_message">\'%1$s\' klasörünü arşivlemek istiyor musunuz?</string>
     <string name="split_parts_number_req">100\'den fazla bölünmüş parçaya izin verin</string>
-    <string name="fast_search">Hızlı Arama Hızlı Arama</string>
-    <string name="fast_search_summary">Android\'in medya indeksini daha hızlı arama için kullanın</string>
+    <string name="fast_search">Hızlı Arama</string>
+    <string name="fast_search_summary">Daha hızlı arama için Android\'in medya indeksini kullanın</string>
     <string name="file_list_is_fixed_for_this_operation">Dosya listesi bu işlem için sabitlenir.</string>
-    <string name="archive_updated_successfully">Arşivi başarıyla güncellendi</string>
+    <string name="archive_updated_successfully">Arşiv başarıyla güncellendi</string>
     <string name="error_no_file_information_provided">Hata: Hiçbir dosya bilgisi sunulmadı.</string>
-    <string name="error_updating_archive">Hata güncelleştirme arşivleri</string>
-    <string name="error_opening_archive">Hata Açılış arşivi: %1$s</string>
-    <string name="no_valid_files_found_to_archive">Arşiv için bulunan geçerli dosyalar yok.</string>
-    <string name="invalid_archive_type">Invalid arşiv türü</string>
-    <string name="updating_archive">Updating archive..</string>
-    <string name="update_archive_service">Update Archive</string>
+    <string name="error_updating_archive">Arşiv güncellenirken hata oluştu</string>
+    <string name="error_opening_archive">Arşiv açılırken hata oluştu: %1$s</string>
+    <string name="no_valid_files_found_to_archive">Arşivlenecek geçerli dosya bulunamadı.</string>
+    <string name="invalid_archive_type">Geçersiz arşiv türü</string>
+    <string name="updating_archive">Arşiv güncelleniyor…</string>
+    <string name="update_archive_service">Arşivi Güncelle</string>
+    <string name="select_directory">Directory\'yi seçin..</string>
+    <string name="output_path">Çıkış yolu</string>
+    <string name="no_match">Hiç maç yok</string>
+    <string name="refresh">Yenileme</string>
+    <string name="refreshed">Yenilendi</string>
+    <string name="storage_info_format">Mevcut: %1$s / Total: %2$s</string>
+    <string name="low_storage_warning">Uyarı: Low depolama alanı! Var: %1$s</string>
+    <string name="low_storage_warning_dynamic">Low storage! %1$s mevcut, En azından - %2$s Ek alan belki arşiv formatına göre gerekliydi.</string>
+    <string name="please_wait">Lütfen bekleyin..</string>
+    <string name="compare">Karşılaştırma</string>
+    <string name="file_does_not_exist">Dosya mevcut değildir</string>
+    <string name="select">Seçiniz</string>
+    <string name="automatic_threads">Maksimum Konular</string>
+    <string name="automatic_threads_subtitle">En hızlı hızlar için maksimum CPU kullanın</string>
+    <string name="automatic_threads_warning">Uyarı: Tüm CPU çekirdeklerini kullanın. Cihaz arşiv işlemi sırasında sorumlu olabilir.</string>
+    <string name="solid_compression_subtitle">Birçok küçük dosyalar için oranı geliştirir, ancak zaman ayırın</string>
+    <string name="destination">General</string>
+    <string name="security">Güvenlik Güvenliği</string>
+    <string name="specify_custom_thread_count">Özel thread count</string>
+    <string name="min_split_size_error">Asgari bölünme boyutu 64KB</string>
+    <string name="success">Başarı</string>
+    <string name="error">Hata hatası</string>
+    <string name="archive_created">Arşiv oluşturma</string>
+    <string name="extraction_completed">Ekstraksiyon Tamamlandı</string>
+    <string name="archive_updated">Archive Güncelleme Tarihi</string>
+    <string name="compression_completed">Tamamlandı</string>
+    <string name="zstd_compression_level_format">ZSTD Promosyon Düzeyi: %d</string>
+    <string name="compression_settings">Sıkıştırma Ayarları</string>
+    <string name="share_file">Share</string>
+    <string name="storage_access_title">Depolama Access Needed</string>
+    <string name="storage_access_description">ZipXtract, dosyalarınızı etkili bir şekilde bulmak, çıkarmak ve organize etmek için cihazınızın depolamasına erişmek için izin gerektirir.</string>
+    <string name="storage_safety_text">Dosyalarınız güvenlidir. Bu uygulama internet izni yoktur, bu nedenle veriler dış sunuculara yüklenemez.</string>
+    <string name="available_storage_format">%1$s kullanılabilir</string>
+    <string name="total_storage_format">Toplam: %1$s</string>
+    <string name="select_storage">Storage Seç</string>
+    <string name="show_hidden_files">Gizli dosyaları göster</string>
+    <string name="show_hidden_files_summary">Show files start with a dott</string>
 </resources>
