--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -142,4 +142,41 @@
     <string name="invalid_archive_type">잘못된 아카이브 유형</string>
     <string name="updating_archive">압축 파일 업데이트…</string>
     <string name="update_archive_service">공지사항</string>
+    <string name="select">제품정보</string>
+    <string name="refresh">지원하다</string>
+    <string name="refreshed">지원하다</string>
+    <string name="output_path">출력 경로</string>
+    <string name="no_match">아니 일치</string>
+    <string name="select_directory">연락처</string>
+    <string name="storage_info_format">사용 가능: %1$s / 총: %2$s</string>
+    <string name="low_storage_warning">경고: 낮은 저장 공간! 사용 가능: %1$s</string>
+    <string name="low_storage_warning_dynamic">낮은 저장! %1$s 사용 가능, 최소 ~%2$s 무료. 아카이브 형식을 기반으로하는 추가 공간.</string>
+    <string name="please_wait">자세히보기</string>
+    <string name="compare">기타 제품</string>
+    <string name="file_does_not_exist">파일이 존재하지 않습니다</string>
+    <string name="automatic_threads">최대 스레드</string>
+    <string name="automatic_threads_subtitle">빠른 속도를 위한 최대 CPU를 사용하십시오</string>
+    <string name="automatic_threads_warning">경고: 모든 CPU 코어를 사용합니다. 장치는 아카이브 작업에서 응답 할 수 있습니다.</string>
+    <string name="solid_compression_subtitle">많은 작은 파일에 대한 비율을 개선하지만 추출 시간은 증가</string>
+    <string name="destination">주요사업</string>
+    <string name="compression_settings">압축 설정</string>
+    <string name="security">보안</string>
+    <string name="specify_custom_thread_count">사용자 정의 스레드 카운트</string>
+    <string name="min_split_size_error">최소한도 쪼개지는 크기는 64KB입니다</string>
+    <string name="success">지원하다</string>
+    <string name="error">계정 정보</string>
+    <string name="archive_created">아카이브 생성</string>
+    <string name="extraction_completed">적출 완료</string>
+    <string name="archive_updated">Archive 업데이트</string>
+    <string name="compression_completed">압축 완료</string>
+    <string name="zstd_compression_level_format">ZSTD 압축 수준: %d</string>
+    <string name="share_file">지원하다</string>
+    <string name="storage_access_title">관련 상품</string>
+    <string name="storage_access_description">ZipXtract는 장치의 저장에 접근 권한을 요구하고, 추출하고, 효과적으로 파일을 구성합니다.</string>
+    <string name="storage_safety_text">당신의 파일은 안전합니다. 이 응용 프로그램은 인터넷 권한이 없습니다, 그래서 데이터는 외부 서버에 업로드 할 수 없습니다.</string>
+    <string name="available_storage_format">%1$s 사용 가능</string>
+    <string name="total_storage_format">합계: %1$s</string>
+    <string name="select_storage">선택 저장</string>
+    <string name="show_hidden_files">숨겨진 파일 표시</string>
+    <string name="show_hidden_files_summary">Dot로 시작하는 파일 보기</string>
 </resources>
