--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -175,4 +175,13 @@
     <string name="compression_completed">Стиснення завершено</string>
     <string name="zstd_compression_level_format">Рівень стиснення ZSTD: %d</string>
     <string name="compression_settings">Налаштування стиснення</string>
+    <string name="share_file">Поділитися</string>
+    <string name="storage_access_title">Потрібен доступ до сховища</string>
+    <string name="storage_access_description">ZipXtract потребує дозволу на доступ до пам\'яті вашого пристрою, щоб ефективно знаходити, розпаковувати та впорядковувати ваші файли.</string>
+    <string name="storage_safety_text">Ваші файли в безпеці. Цей додаток не має доступу до Інтернету, тому дані не можна завантажувати на зовнішні сервери.</string>
+    <string name="available_storage_format">Доступно %1$s</string>
+    <string name="total_storage_format">Разом: %1$s</string>
+    <string name="select_storage">Виберіть сховище</string>
+    <string name="show_hidden_files">Показати приховані файли</string>
+    <string name="show_hidden_files_summary">Показати файли, що починаються з крапки</string>
 </resources>
