--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -171,4 +171,13 @@
     <string name="min_split_size_error">最小分割大小为 64KB</string>
     <string name="archive_created">创建了压缩文件</string>
     <string name="archive_updated">更新了压缩文件</string>
+    <string name="share_file">分享</string>
+    <string name="select_storage">选择存储空间</string>
+    <string name="show_hidden_files">显示隐藏文件</string>
+    <string name="show_hidden_files_summary">显示以点开头的文件</string>
+    <string name="total_storage_format">总计：%1$s</string>
+    <string name="storage_access_title">需要存储访问权限</string>
+    <string name="storage_access_description">ZipXtract 需要获得访问设备存储空间的权限，才能有效地查找、提取和整理文件。</string>
+    <string name="storage_safety_text">你的文件是安全的。此应用没有互联网权限，因此数据无法上传到外部服务器。</string>
+    <string name="available_storage_format">有 %1$s 可用</string>
 </resources>
